# PAR-NP

./: .pre-commit-config.yaml  README.md  initial_tests.ipynb  pyproject.toml
scripts/: benchmark_datasets.py
src/PAR_NP/: lightning.py
src/PAR_NP/data/: abstract.py  predprey.py
src/PAR_NP/logging/: __init__.py  log.py  mlflow.py
src/PAR_NP/models/: __init__.py
workflow/: runner.py
workflow/config/: mlflow.yaml
